file upload / tags style

--- a/templates/article/blog_grid.html.twig
+++ b/templates/article/blog_grid.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Blog
+{% block title %}Yumlink: Blog
 {% endblock %}
 
 {% block body %}
@@ -53,4 +53,4 @@
 			</div>
 		</div>
 	</div>
-</div>{% endblock %}
+{% endblock %}
