--- a/templates/article/post_details.html.twig
+++ b/templates/article/post_details.html.twig
@@ -28,7 +28,7 @@
 								comments</li>
 						</ul>
 						<h2>{{article.titleArticle}}</h2>
-						<p></p>
+						<p>{{article.descriptionArticle}}</p>
 
 						<div class="article-share">
 							<div class="row align-items-center">
