file upload / tags style

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -87,7 +87,7 @@
 						</ul>
 					</div>
 					<div class="header-item">
-						<a  class="cart-top-btn">
+						<a href="cart.html" class="cart-top-btn">
 							<i class="bx bx-shopping-bag"></i>
 							<span>0</span>
 						</a>
