--- a/templates/recettes/index.html.twig
+++ b/templates/recettes/index.html.twig
@@ -3,6 +3,67 @@
 {% block title %}Recettes index{% endblock %}
 
 {% block body %}
+<div class="inner-banner inner-bg5">
+<div class="container">
+<div class="inner-title text-center">
+<h3> Recipe</h3>
+<ul>
+<li>
+<a href="index.html">Home</a>
+</li>
+<li> Recipe</li>
+</ul>
+</div>
+</div>
+</div>
+
+<div class="recent-recipe-area pt-100 pb-70">
+    <div class="container">
+        <div class="section-title text-center">
+            <span>Recent Recipe</span>
+            <h2>Our Latest Recipe</h2>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row pt-45 justify-content-center">
+            {% for recette in recettes %}
+            <div class="col-lg-4 col-md-6">
+                <div class="recent-recipe-item">
+                    <!-- You can replace the link with the appropriate path for your application -->
+                    <a href="{{ path('app_recettes_show', {'idR': recette.idR}) }}">
+                        <!-- You can replace the image source with the appropriate URL or use a dynamic source from your entity -->
+                        <img src="/assets/images/recipe-img/recipe-another-img1.jpg" alt="Images">
+                    </a>
+                    <div class="content">
+                        <h3><a href="{{ path('app_recettes_show', {'idR': recette.idR}) }}">{{ recette.nom }}</a></h3>
+                        <!-- Add other fields as needed -->
+                        <div class="rating">
+                            <!-- Add your rating logic here -->
+                        </div>
+                        <p>{{ recette.description }}</p>
+                        <div class="rating">
+<i class="bx bxs-star"></i>
+<i class="bx bxs-star"></i>
+<i class="bx bxs-star"></i>
+<i class="bx bxs-star"></i>
+<i class="bx bxs-star"></i>
+</div>
+                        <ul>
+                            <li>
+                                <!-- You can replace the user image with the appropriate source or use a dynamic source from your entity -->
+                                <img src="/assets/images/recipe-img/recipe-user1.jpg" alt="Images">
+                            </li>
+                            <li><a href="author.html">By {{ recette.chef }}</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
+
     <h1>Recettes index</h1>
 
     <table class="table">
