--- a/templates/recettes/_form.html.twig
+++ b/templates/recettes/_form.html.twig
@@ -1,4 +1,66 @@
+
+
+
+<div class="appointment-area pt-100 pb-70">
+<div class="container">
+<div class="appointment-form">
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+<h2>Nouvelle recette</h2>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="form-group">
+                {{ form_label(form.nom, 'Nom') }}
+                {{ form_widget(form.nom, {'attr': {'class': 'form-control', 'placeholder': 'Nom de la recette', 'required': 'required'}}) }}
+            </div>
+        </div>
+        <div class="col-lg-12">
+            <div class="form-group">
+                {{ form_label(form.chef, 'Chef') }}
+                {{ form_widget(form.chef, {'attr': {'class': 'form-control', 'placeholder': 'Nom chef', 'required': 'required'}}) }}
+            </div>
+        </div>
+       <div class="col-lg-12">
+        <div class="form-group">
+            {{ form_label(form.ingredients, 'Ingredients') }}
+            {{ form_widget(form.ingredients, {'attr': {'class': 'form-select form-control', 'required': 'required'}}) }}
+        </div>
+    </div>
+        <div class="col-lg-6">
+            <div class="form-group">
+                {{ form_label(form.description, 'Description') }}
+                {{ form_widget(form.description, {'attr': {'class': 'form-control', 'placeholder': 'Description', 'required': 'required'}}) }}
+            </div>
+        </div>
+        <div class="col-lg-6">
+            <div class="form-group">
+                {{ form_label(form.imgsrc, 'image') }}
+                {{ form_widget(form.imgsrc, {'attr': {'class': 'form-control ', 'placeholder': 'Ajouter une image', 'required': 'required'}}) }}
+            </div>
+        </div>
+        <div class="col-lg-12">
+            <div class="form-group">
+                {{ form_label(form.categorie, 'Categorie') }}
+                {{ form_widget(form.categorie, {'attr': {'class': 'form-select form-control', 'required': 'required'}}) }}
+            </div>
+        </div>
+        <div class="col-lg-6">
+            <div class="form-group">
+                {{ form_label(form.calorie, 'Calorie') }}
+                {{ form_widget(form.calorie, {'attr': {'class': 'form-control ', 'placeholder': 'Calorie', 'required': 'required'}}) }}
+            </div>
+        </div>
+         <div class="col-lg-6">
+            <div class="form-group">
+                {{ form_label(form.protein, 'Protein') }}
+                {{ form_widget(form.protein, {'attr': {'class': 'form-control ', 'placeholder': 'Protein', 'required': 'required'}}) }}
+            </div>
+        </div>
+        <div class="col-lg-12 col-md-12">
+            <button type="submit" class="default-btn">Submit Now</button>
+        </div>
+    </div>
 {{ form_end(form) }}
+
+</div>
+</div>
+</div>
