--- a/templates/recettes/new.html.twig
+++ b/templates/recettes/new.html.twig
@@ -3,8 +3,28 @@
 {% block title %}New Recettes{% endblock %}
 
 {% block body %}
-    <h1>Create new Recettes</h1>
+<div class="inner-banner inner-bg6">
+<div class="container">
+<div class="inner-title text-center">
+<h3>Ajouter une nouvelle recette</h3>
+<ul>
+<li>
+<a href="index.html">Home</a>
+</li>
+<li>Nouvelle recette</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="work-area pt-100 pb-70">
+<div class="container">
+<div class="section-title text-center">
+<span></span>
+<h2></h2>
 
+</div>
+</div>
+</div>
     {{ include('recettes/_form.html.twig') }}
 
     <a href="{{ path('app_recettes_index') }}">back to list</a>
