--- a/templates/recettes/show.html.twig
+++ b/templates/recettes/show.html.twig
@@ -9,7 +9,7 @@
             <div class="col-lg-8">
                 <div class="recipe-details-content">
                     <div class="recipe-preview-img">
-                        <img src="/assets/images/recipe-img/recipe-details.jpg" alt="Images">
+                          <img src="{{ recette.imgsrc }}" alt="Images">
                     </div>
                     <ul class="tag-list">
                         <li class="active"><a href="author.html"> <i class="bx bx-user"></i>{{ recette.chef }} </a></li>
