--- a/templates/recettes/new.html.twig
+++ b/templates/recettes/new.html.twig
@@ -3,13 +3,14 @@
 {% block title %}New Recettes{% endblock %}
 
 {% block body %}
+
 <div class="inner-banner inner-bg6">
 <div class="container">
 <div class="inner-title text-center">
 <h3>Ajouter une nouvelle recette</h3>
 <ul>
 <li>
-<a href="index.html">Home</a>
+<a href="{{ path('app_recettes_index') }}">Home</a>
 </li>
 <li>Nouvelle recette</li>
 </ul>
