--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -384,7 +384,7 @@ Contact Us
 </div>
 </div>
 <div class="optional-item">
-<a href="appointment.html" class="default-btn two">Book An Appointment</a>
+<a href="{{ path('app_recettes_new') }}" class="default-btn two">Add a new recipe </a>
 </div>
 </div>
 <div class="mobile-nav">
