--- a/templates/recettes/_form.html.twig
+++ b/templates/recettes/_form.html.twig
@@ -11,13 +11,15 @@
             <div class="form-group">
                 {{ form_label(form.nom, 'Nom') }}
                 {{ form_widget(form.nom, {'attr': {'class': 'form-control', 'placeholder': 'Nom de la recette', 'required': 'required'}}) }}
+                 {{ form_errors(form.nom) }}
             </div>
         </div>
         <div class="col-lg-12">
             <div class="form-group">
                 {{ form_label(form.chef, 'Chef') }}
                 {{ form_widget(form.chef, {'attr': {'class': 'form-control', 'placeholder': 'Nom chef', 'required': 'required'}}) }}
-            </div>
+             {{ form_errors(form.chef) }}
+         </div>
         </div>
        <div class="col-lg-12">
         <div class="form-group">
@@ -25,34 +27,42 @@
             {{ form_widget(form.ingredients, {'attr': {'class': 'form-select form-control', 'required': 'required'}}) }}
         </div>
     </div>
-        <div class="col-lg-6">
+    <div class="col-lg-12">
+    <p>Your ingredient is not here? <a href="{{ path('app_ingredient_new') }}">Click here</a> to add</p>
+</div>
+        <div class="col-lg-12">
             <div class="form-group">
                 {{ form_label(form.description, 'Description') }}
-                {{ form_widget(form.description, {'attr': {'class': 'form-control', 'placeholder': 'Description', 'required': 'required'}}) }}
+                {{ form_widget(form.description, {'attr': {'class': 'form-control', 'placeholder': 'Description', 'required': 'required' ,'rows': '5'}}) }}
+              {{ form_errors(form.description) }}
             </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-12">
             <div class="form-group">
                 {{ form_label(form.imgsrc, 'image') }}
                 {{ form_widget(form.imgsrc, {'attr': {'class': 'form-control ', 'placeholder': 'Ajouter une image', 'required': 'required'}}) }}
+                  {{ form_errors(form.imgsrc) }}
             </div>
         </div>
         <div class="col-lg-12">
             <div class="form-group">
                 {{ form_label(form.categorie, 'Categorie') }}
                 {{ form_widget(form.categorie, {'attr': {'class': 'form-select form-control', 'required': 'required'}}) }}
+              {{ form_errors(form.categorie) }}
             </div>
         </div>
         <div class="col-lg-6">
             <div class="form-group">
                 {{ form_label(form.calorie, 'Calorie') }}
                 {{ form_widget(form.calorie, {'attr': {'class': 'form-control ', 'placeholder': 'Calorie', 'required': 'required'}}) }}
+            {{ form_errors(form.calorie) }}
             </div>
         </div>
          <div class="col-lg-6">
             <div class="form-group">
                 {{ form_label(form.protein, 'Protein') }}
                 {{ form_widget(form.protein, {'attr': {'class': 'form-control ', 'placeholder': 'Protein', 'required': 'required'}}) }}
+           {{ form_errors(form.protein) }}
             </div>
         </div>
         <div class="col-lg-12 col-md-12">
