api works and made some styling in all pages

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -175,6 +175,11 @@
   								  Modifier
 								</a>
                                 </a>
+                            </li> <li class="nav-item">
+                              <a href="{{ path('recipe_analyzer') }}" class="nav-link">
+  								  Analysez un plat 
+								</a>
+                                </a>
                             </li>
                         </ul>
                     </li>
